Fix horizontal scrolling bug

--- a/styles/learningcenter.scss
+++ b/styles/learningcenter.scss
@@ -141,12 +141,6 @@ main section {
   margin-top: 150px;
 }
 
-main > *:not(section),
-section > *:not(h2) {
-  padding-right: 1em;
-  max-width: 1200px;
-}
-
 section .links {
   display: flex;
   flex-direction: row;
